# whatsthedeal

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: django.yml
src/whatsthedeal_app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/whatsthedeal_app/management/: __init__.py
src/whatsthedeal_app/management/commands/: seed_supermarkets.py
src/whatsthedeal_app/migrations/: 0001_initial.py  0002_remove_mealdeal_description.py  0003_dislike.py  0004_preference_remove_dislike_unique_user_post_dislike_and_more.py  0005_alter_preference_unique_together_and_more.py  0006_comment.py
src/whatsthedeal_app/static/whatsthedeal_app/css/: main.css
src/whatsthedeal_app/templates/: base.html  index.html
src/whatsthedeal_app/templates/account/: login.html  signup.html
src/whatsthedeal_app/templates/whatsthedeal_app/: feed.html  post_form.html  profile.html  view.html
src/whatsthedeal_app/templates/whatsthedeal_app/partials/: back_button.html  like_dislike.html  post.html  post_view.html
src/whatsthedeal_app/templates/widgets/: image_clearable_file_input.html
src/whatsthedeal_site/: settings.py  urls.py
