[project]
name = "whatsthedeal"
version = "0.1.0"
description = "An app to share meal deals to your friends"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
prod = [
    "gunicorn>=26.0.0",
]
